# collective

./: .editorconfig  .gitignore  .gitmodules  .lazy.lua  App.axaml  App.axaml.cs  CMakeLists.txt  ImageHelper.cs  Main.qml  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  README.md  app.manifest  build.ps1  collective.csproj  collective.sln  main.cpp
.github/workflows/: packaging.yml
packaging/windows/ifw/config/: config.xml  controlscript.qs
qml/: CollectiveDialog.qml  Dialog.qml  EmojiPickerWindow.qml  ImageList.qml  ImageListThumbnail.qml  Main.qml  MiniWaveform.qml  MusicPreview.qml  PreviewWindow.qml  RecordPlayerWindow.qml  WorkspaceSwitcher.qml  emojis.js
src/: mediaImageProvider.cpp  mediaImageProvider.h  mediaPlayer.cpp  mediaPlayer.h  utils.cpp  utils.h
updates/: 2025-11-07-0920_meta.7z  2025-11-07-0934_meta.7z  Updates.xml
updates/com.collective.app/: 1.0.0-0content.7z.sha1  1.0.0-0generic.7z  1.0.0-0generic.7z.sha1  1.0.0-0iconengines.7z  1.0.0-0iconengines.7z.sha1  1.0.0-0imageformats.7z  1.0.0-0imageformats.7z.sha1  1.0.0-0multimedia.7z  1.0.0-0multimedia.7z.sha1  1.0.0-0networkinformation.7z  1.0.0-0networkinformation.7z.sha1  1.0.0-0platforms.7z  1.0.0-0platforms.7z.sha1  1.0.0-0qml.7z  1.0.0-0qml.7z.sha1  1.0.0-0qmltooling.7z  1.0.0-0qmltooling.7z.sha1  1.0.0-0styles.7z  1.0.0-0styles.7z.sha1  1.0.0-0tls.7z  1.0.0-0tls.7z.sha1  1.0.0-0translations.7z  1.0.0-0translations.7z.sha1
